2024-07-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52985: Src/exec.c: avoid adding original param to restorelist

2024-06-28  Bart Schaefer  <schaefer@zsh.org>

	* Philippe Altherr: 52977: Src/exec.c, Test/C03traps.ztst: fix
	and test regression so that ERR_EXIT and ERR_RETURN are respected
	by the final command in an && / || sequence.

2024-06-24  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52968: Doc/Makefile.in: use pdfroff to create intro.pdf

2024-06-13  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52951: Src/builtin.c: make sure to close memstream for 'print -v'

2024-06-08  Mikael Magnusson  <mikachu@gmail.com>

	* 52946: Completion/compdump, Completion/compinit: Revert 52768

2024-05-24  Bart Schaefer  <schaefer@zsh.org>

	* users/29882: Etc/FAQ.yo: Explain $RANDOM predictability

	* 52910: Functions/Misc/zmv: Improve handling of **/ patterns

	* 52904: Completion/Unix/Command/_git: Improve quoting of paths
	passed via _call_program to "git ls-files"

2024-05-20  Mikael Magnusson  <mikachu@gmail.com>

	* 52895: Completion/Unix/Type/_baudrates: Partial revert of
	44274 which broke _baudrates

2024-05-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 52924: Src/Modules/zftp.c: NULL zfsessions after free.

2024-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 52915: Doc/Zsh/cond.yo: be explicit about behaviour of globbing
	patterns within conditions.

2024-04-07  Mikael Magnusson  <mikachu@gmail.com>

	* 52878: Src/subst.c: Fix ${foo:^bar} where bar is an associative
	array

2024-04-01  Bart Schaefer  <schaefer@zsh.org>

	* 52865: Doc/Zsh/expn.yo, Doc/Zsh/params.yo, Etc/FAQ.yo:
	Documentation update for 52864

	* 52864: Src/lex.c, Src/subst.c, Test/D10nofork.ztst,
	Test/V10private.ztst: Change ${|var|...} to ${{var} ...},
	limit local REPLY behavior to ${|...}, update tests.

	* 52781 (and typo fix): Src/hashtable.c: HIST IGNORE_DUPS treats
	whitespace as significant when HIST_REDUCE_BLANKS is also set.
